Home Page Most Popular Results; Main Menu Items; Administration; UserData Manage;

--- a/Streamus/Streamus.Web/Content/Site.css
+++ b/Streamus/Streamus.Web/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    /*padding-top: 50px;*/
+    padding-top: 50px;
     padding-bottom: 20px;
 	background-color: #2b2b2b;
 	color: white;
@@ -25,10 +25,18 @@ textarea {
     max-width: 280px;
 }
 
-.video-title {
-	max-height: 20px;
+.text-overflow {
+	white-space: nowrap;
 	overflow:hidden;
 	-ms-text-overflow: ellipsis;
 	-o-text-overflow: ellipsis;
 	text-overflow: ellipsis;
 }
+
+.top5 { margin-top:5px; }
+.top7 { margin-top:7px; }
+.top10 { margin-top:10px; }
+.top15 { margin-top:15px; }
+.top17 { margin-top:17px; }
+.top30 { margin-top:30px; }
+.top60 { margin-top:60px; }
