--- a/Streamus/Streamus.Web/Areas/UserData/Views/Collections/Details.cshtml
+++ b/Streamus/Streamus.Web/Areas/UserData/Views/Collections/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Streamus.Data.Models.Collection
 
 @{
-    ViewBag.Title = "Details";
+	ViewBag.Title = "Collection Details";
 }
 
-<h2>Details</h2>
+<h2>Collection Details</h2>
 
 <div>
     <h4>Collection</h4>
