--- a/Streamus/Streamus.Web/Areas/UserData/Views/Playlists/Details.cshtml
+++ b/Streamus/Streamus.Web/Areas/UserData/Views/Playlists/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Streamus.Data.Models.Playlist
 
 @{
-    ViewBag.Title = "Details";
+	ViewBag.Title = "Playlist Details";
 }
 
-<h2>Details</h2>
+<h2>Playlist Details</h2>
 
 <div>
     <h4>Playlist</h4>
