--- a/Streamus/Streamus.Web/Areas/UserData/Views/Playlists/Edit.cshtml
+++ b/Streamus/Streamus.Web/Areas/UserData/Views/Playlists/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Streamus.Data.Models.Playlist
 
 @{
-    ViewBag.Title = "Edit";
+	ViewBag.Title = "Playlist Edit";
 }
 
-<h2>Edit</h2>
+<h2>Playlist Edit</h2>
 
 
 @using (Html.BeginForm())
