--- a/Streamus/Streamus.Web/Areas/UserData/Views/Collections/Delete.cshtml
+++ b/Streamus/Streamus.Web/Areas/UserData/Views/Collections/Delete.cshtml
@@ -1,11 +1,10 @@
 ﻿@model Streamus.Data.Models.Collection
 
 @{
-    ViewBag.Title = "Delete";
+	ViewBag.Title = "Delete Collection";
 }
 
-<h2>Delete</h2>
-
+<h2>Delete Collection</h2>
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Collection</h4>
