--- a/Streamus/Streamus.Web/Areas/UserData/Views/Collections/Edit.cshtml
+++ b/Streamus/Streamus.Web/Areas/UserData/Views/Collections/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Streamus.Data.Models.Collection
 
 @{
-    ViewBag.Title = "Edit";
+	ViewBag.Title = "Edit Collection";
 }
 
-<h2>Edit</h2>
+<h2>Edit Collection</h2>
 
 
 @using (Html.BeginForm())
