--- a/Streamus/Streamus.Web/Areas/UserData/Views/Playlists/Create.cshtml
+++ b/Streamus/Streamus.Web/Areas/UserData/Views/Playlists/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Streamus.Data.Models.Playlist
 
 @{
-    ViewBag.Title = "Create";
+	ViewBag.Title = "Create Playlist";
 }
 
-<h2>Create</h2>
+<h2>Create Playlist</h2>
 
 
 @using (Html.BeginForm()) 
@@ -15,14 +15,6 @@
         <h4>Playlist</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
