--- a/Streamus/Streamus.Web/Areas/UserData/Views/Playlists/Delete.cshtml
+++ b/Streamus/Streamus.Web/Areas/UserData/Views/Playlists/Delete.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Streamus.Data.Models.Playlist
 
 @{
-    ViewBag.Title = "Delete";
+	ViewBag.Title = "Delete Playlist";
 }
 
-<h2>Delete</h2>
+<h2>Delete Playlist</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
