--- a/Streamus/Streamus.Web/Areas/Administration/Views/Playlists/Index.cshtml
+++ b/Streamus/Streamus.Web/Areas/Administration/Views/Playlists/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using Streamus.Web.Areas.Administration.ViewModel;
+﻿@using Streamus.Web.ViewModels.Shared;
 @{
 	const string ControllerName = GlobalConstants.Playlists;
     ViewBag.Title = ControllerName;
