--- a/Streamus/Streamus.Web/Content/Site.css
+++ b/Streamus/Streamus.Web/Content/Site.css
@@ -40,3 +40,11 @@ textarea {
 .top17 { margin-top:17px; }
 .top30 { margin-top:30px; }
 .top60 { margin-top:60px; }
+
+.bottom5 { margin-bottom:5px; }
+.bottom7 { margin-bottom:7px; }
+.bottom10 { margin-bottom:10px; }
+.bottom15 { margin-bottom:15px; }
+.bottom17 { margin-bottom:17px; }
+.bottom30 { margin-bottom:30px; }
+.bottom60 { margin-bottom:60px; }
