--- a/Streamus/Streamus.Web/Areas/UserData/Views/MediaItems/Index.cshtml
+++ b/Streamus/Streamus.Web/Areas/UserData/Views/MediaItems/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Streamus.Data.Models.MediaItem>
+﻿@model IEnumerable<Streamus.Web.ViewModels.Shared.MediaItemViewModel>
 
 @{
 	ViewBag.Title = GlobalConstants.MediaItems;
@@ -21,9 +21,6 @@
             @Html.DisplayNameFor(model => model.Duration)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LQImageUrl)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.MQImageUrl)
         </th>
         <th>
@@ -42,9 +39,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Duration)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LQImageUrl)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.MQImageUrl)
