--- a/Streamus/Streamus.Web/Views/MediaItems/_MediaItemsList.cshtml
+++ b/Streamus/Streamus.Web/Views/MediaItems/_MediaItemsList.cshtml
@@ -14,7 +14,7 @@
 			  .DataBound(
 			@<text>
 				function() {
-				//Handle the dataBound event inline
+					window.attachEvents();
 				}
 			</text>)
               .Change(
